# drugMR

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
assets/: config.yaml  mediator_manifest.csv
assets/.ipynb_checkpoints/: config-checkpoint.yaml  mediator_manifest-checkpoint.csv
dashboard/: drugmr.hyper  drugmr_dashboard_template.twb  mr_app.py
drugmr/: __init__.py  cojo.py  config.py  hpc.py  local.py  network_mr.py  phewas.py  smr.py  twosamplemr.py
env/: Dockerfile  requirements.txt
notebooks/: 00_drugmr.ipynb
notebooks/.ipynb_checkpoints/: 00_drugmr-checkpoint.ipynb
notebooks/.streamlit/: secrets.toml
notebooks/results/cis-MR/: ukb_ppp_AD_all_MR.tsv
scripts/: ukb_ppp.py
scripts/SingleBrain/: preprocess_sc_eQTLs.py  smr_etl.py
scripts/deCODE/: decode_preprocessing.sbatch  harmonise.py  preprocesing_workflow.py  protein_gene_list.py  submit_decode_preprocessing.py
scripts/ukb_ppp/: launch.py  list_proteins.py  protein_manifest.py  ukb_ppp.py  ukb_ppp_download.sbatch  ukb_ppp_super_cpu.py
scripts/ukb_ppp/missing/: missing.txt  missing_targets.py  missing_targets.sbatch
scripts/wu_csf/: assemble_final_manifest.py  csf_preprocessing_pipeline.py  prots.py  submit_csf_job.py  wu_csf_preprocessing.sbatch
workflow/: __init__  hpc.py
workflows/: __init__.py  hpc.py
